--- a/src/styles/partials/_careers-page.scss
+++ b/src/styles/partials/_careers-page.scss
@@ -37,6 +37,10 @@
         width: 30%;
         display: block;
       }
+      a {
+        text-decoration: none;
+        color: white;
+      }
     }
   }
   .careers-header-col-right {
