--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -28,7 +28,7 @@
     border-radius: 7px;
     font-size: 14px;
     font-weight: 500;
-    min-width: 120px;
+    width: 100%;
     padding: 10px 0;
     @include variables.lg {
       width: 120px;
