--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,6 +12,7 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 $screen-lg-min: 1024px;
 $screen-xl-min: 1200px;
+$screen-xxl-min: 1450px;
 
 @mixin sm {
   @media (min-width: #{$screen-sm-min}) {
@@ -33,6 +34,12 @@ $screen-xl-min: 1200px;
 
 @mixin xl {
   @media (min-width: #{$screen-xl-min}) {
+    @content;
+  }
+}
+
+@mixin xxl {
+  @media (min-width: #{$screen-xxl-min}) {
     @content;
   }
 }
