--- a/src/styles/partials/_basics-page.scss
+++ b/src/styles/partials/_basics-page.scss
@@ -80,13 +80,17 @@
     border-radius: 15px;
     padding: 20px 20px;
     width: 90%;
-    bottom: -14%;
+    bottom: -15%;
     left: 5%;
     background-color: white;
     @include variables.md {
+      bottom: -11%;
       padding: 30px 30px;
       flex-direction: row;
       justify-content: space-between;
+    }
+    @include variables.xxl {
+      left: 24%;
     }
     .basics-next-batch-button-container {
       display: flex;
@@ -118,6 +122,7 @@
   padding-top: 120px;
   padding-bottom: 20px;
   @include variables.md {
+    padding-top: 80px;
     padding-bottom: 40px;
   }
   .basics-content-col {
@@ -147,6 +152,12 @@
         }
         .basics-overview-slide-container {
           width: 95%;
+          .slide-container {
+            padding-bottom: 10px;
+            .slide-image {
+              min-height: 70px;
+            }
+          }
         }
       }
 
@@ -158,13 +169,19 @@
         @include variables.md {
           display: none;
         }
+        .slide-container {
+          padding-bottom: 40px;
+          .slide-image {
+            min-height: 70px;
+          }
+        }
       }
       .basics-testimonial-row {
         background-color: variables.$light;
         padding-top: 30px;
         padding-bottom: 10px;
         @include variables.md {
-          padding: 50px 20px 30px 20px;
+          padding: 20px;
         }
         .basics-testimonial-image-container {
           padding-bottom: 30px;
@@ -261,7 +278,7 @@
     .basics-curriculum-container {
       padding-top: 20px;
       @include variables.md {
-        padding-top: 50px;
+        padding-top: 20px;
         padding-left: 50px;
       }
       .basics-curriculum-heading {
@@ -313,8 +330,8 @@
       padding-bottom: 30px;
       @include variables.md {
         padding-left: 50px;
-        padding-top: 50px;
-        padding-bottom: 50px;
+        padding-top: 20px;
+        padding-bottom: 20px;
       }
       .basics-instructors-heading {
         font-family: variables.$secondary-font;
@@ -327,7 +344,6 @@
         @include variables.md {
           font-size: 32px;
           line-height: 44px;
-          padding-top: 30px;
           padding-bottom: 30px;
         }
       }
@@ -380,12 +396,8 @@
       }
     }
     .basics-admissions-container {
-      padding-top: 30px;
-      padding-bottom: 30px;
       @include variables.md {
         padding-left: 50px;
-        padding-top: 50px;
-        padding-bottom: 50px;
       }
       .basics-admissions-heading {
         font-family: variables.$secondary-font;
@@ -497,7 +509,6 @@
         font-size: 20px;
         line-height: 28px;
         @include variables.md {
-          padding-top: 30px;
           padding-bottom: 30px;
           font-size: 32px;
           line-height: 44px;
@@ -588,7 +599,7 @@
     }
     .basics-course-container {
       font-family: variables.$secondary-font;
-      padding-top: 40px;
+      padding-top: 20px;
       font-style: normal;
       @include variables.md {
         padding-left: 50px;
@@ -646,6 +657,9 @@
           font-size: 14px;
           line-height: 20px;
           padding: 15px 15px 15px 10px;
+          ul {
+            padding-left: 10px;
+          }
         }
 
         .basics-course-lesson-number,
