layout, css, content fixes, disappearing markdown fix, changed checkboxes to radios on application form

--- a/src/styles/partials/_about-page.scss
+++ b/src/styles/partials/_about-page.scss
@@ -257,6 +257,9 @@
         padding-top: 15px;
         padding-bottom: 15px;
       }
+      .about-leaders-profile-experience {
+        line-height: 20px;
+      }
     }
   }
   .about-leaders-jobs-row {
