--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -160,6 +160,8 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 48px;
+    display: flex;
+    align-items: center;
   }
   .homepage-courses-cards-row {
     .card {
