--- a/src/styles/partials/_basics-page.scss
+++ b/src/styles/partials/_basics-page.scss
@@ -90,7 +90,10 @@
       justify-content: space-between;
     }
     @include variables.xxl {
-      left: 24%;
+      left: 13%;
+    }
+    @include variables.xxxl {
+      left: 17%;
     }
     .basics-next-batch-button-container {
       display: flex;
@@ -622,6 +625,9 @@
         @include variables.md {
           font-size: 16px;
           line-height: 26px;
+        }
+        a {
+          color: variables.$red;
         }
       }
       .basics-course-content-desktop {
