--- a/src/styles/partials/_bootcamp-page.scss
+++ b/src/styles/partials/_bootcamp-page.scss
@@ -83,7 +83,10 @@
       justify-content: space-between;
     }
     @include variables.xxl {
-      left: 24%;
+      left: 13%;
+    }
+    @include variables.xxxl {
+      left: 17%;
     }
     .basics-next-batch-button-container {
       display: flex;
@@ -380,7 +383,7 @@
           padding-top: 0;
           padding-bottom: 5px;
           ul {
-            padding-left: none;
+            padding-left: 0;
             list-style: none;
             font-weight: normal;
             font-size: 12px;
