--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -12,7 +12,8 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 $screen-lg-min: 1024px;
 $screen-xl-min: 1200px;
-$screen-xxl-min: 1450px;
+$screen-xxl-min: 1600px;
+$screen-xxxl-min: 2000px;
 
 @mixin sm {
   @media (min-width: #{$screen-sm-min}) {
@@ -40,6 +41,12 @@ $screen-xxl-min: 1450px;
 
 @mixin xxl {
   @media (min-width: #{$screen-xxl-min}) {
+    @content;
+  }
+}
+
+@mixin xxxl {
+  @media (min-width: #{$screen-xxxl-min}) {
     @content;
   }
 }
