--- a/src/styles/partials/_about-page.scss
+++ b/src/styles/partials/_about-page.scss
@@ -84,6 +84,7 @@
     }
   }
 }
+
 .about-rocket-container {
   display: flex;
   flex-direction: column;
@@ -170,12 +171,12 @@
 }
 
 .about-companies-outer-container {
-  background-color: variables.$bg-blue;
+  background-color: white;
+  padding-bottom: 50px;
+
   .about-companies-inner-container {
-    padding-top: 50px;
-    padding-bottom: 50px;
     @include variables.md {
-      padding: 100px 50px;
+      padding: 20px 50px;
     }
     .about-companies-text {
       text-align: center;
@@ -187,13 +188,11 @@
       line-height: 19px;
       letter-spacing: 0.03em;
       text-transform: uppercase;
-      padding-bottom: 30px;
-      color: rgba(255, 255, 255, 0.5);
+      color: black;
 
       @include variables.md {
         font-size: 16px;
         line-height: 22px;
-        padding-bottom: 50px;
       }
     }
     .about-companies-logos {
@@ -206,7 +205,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 30px;
+        padding: 0 30px;
         @include variables.md {
           width: 25%;
         }
