--- a/src/styles/partials/_bootcamp-page.scss
+++ b/src/styles/partials/_bootcamp-page.scss
@@ -870,16 +870,6 @@
           font-size: 14px;
           line-height: 20px;
           padding: 15px 15px 15px 10px;
-          span {
-            color: variables.$red;
-            background: #fef2f2;
-            border-radius: 4px;
-            padding: 5px;
-            margin-right: 5px;
-            font-weight: 600;
-            font-size: 14px;
-            line-height: 19px;
-          }
         }
 
         .bootcamp-course-lesson-number,
@@ -888,6 +878,21 @@
           font-weight: 600;
           font-size: 16px;
           line-height: 23px;
+        }
+        .bootcamp-course-lesson-topics {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: flex-start;
+          .bootcamp-course-lesson-topic {
+            color: variables.$red;
+            background: #fef2f2;
+            border-radius: 5px;
+            padding: 3px 5px;
+            margin: 3px 5px 3px 0;
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 19px;
+          }
         }
       }
       .bootcamp-course-content-mobile {
