--- a/src/styles/partials/_start-coding.scss
+++ b/src/styles/partials/_start-coding.scss
@@ -36,6 +36,7 @@
       @include variables.md {
         width: 40%;
         font-size: 18px;
+        padding: 50px 0;
       }
       .startcoding-info {
         display: flex;
