fixed sidebar bug (due to changed course links)

--- a/src/styles/partials/_faq-page.scss
+++ b/src/styles/partials/_faq-page.scss
@@ -49,6 +49,9 @@
     }
 
     .faq-content-col {
+      a {
+        color: variables.$red;
+      }
       @include variables.md {
       }
       .faq-content-col-accordion {
