--- a/src/styles/partials/_careers-page.scss
+++ b/src/styles/partials/_careers-page.scss
@@ -49,6 +49,10 @@
       margin-bottom: 20px;
       color: white;
       width: 100%;
+      a {
+        text-decoration: none;
+        color: white;
+      }
       @include variables.md {
         display: none;
       }
