css adjustments to image , formerstudents section,homepage

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -370,6 +370,9 @@
       .homepage-formerstudents-company {
         width: 150px;
         min-height: 88px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       .homepage-formerstudents-testimonial {
         font-weight: normal;
