--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -42,7 +42,6 @@
     }
   }
   .homepage-header-companies-container {
-    height: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -54,6 +53,8 @@
     .homepage-header-individual-company {
       width: 100px;
       padding: 0px 10px;
+      display: flex;
+
       @include variables.lg {
         padding: 0 20px 0 0;
       }
@@ -74,7 +75,7 @@
     }
   }
   .homepage-header-col-left {
-    padding-bottom: 40px;
+    padding-bottom: 30px;
   }
 }
 .homepage-message-bubble-row {
