--- a/src/styles/partials/_thanks.scss
+++ b/src/styles/partials/_thanks.scss
@@ -4,7 +4,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-
+  height: 100vw;
+  @include variables.md {
+    height: 75vw;
+  }
   .thanks-message-cont {
     background-color: $light;
     min-height: 30vh;
@@ -15,7 +18,7 @@
     -webkit-box-shadow: 5px 5px 15px 5px #9b9b9b;
     box-shadow: 5px 5px 15px 5px #9b9b9b;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-direction: column;
     align-items: flex-start;
     @include media-breakpoint-up(md) {
@@ -24,6 +27,7 @@
 
     h4 {
       color: variables.$blue;
+      padding-bottom: 30px;
     }
   }
 }
