--- a/src/styles/partials/_bootcamp-page.scss
+++ b/src/styles/partials/_bootcamp-page.scss
@@ -832,6 +832,9 @@
         font-weight: normal;
         font-size: 14px;
         line-height: 24px;
+        a {
+          color: variables.$red;
+        }
         @include variables.md {
           font-size: 16px;
           line-height: 26px;
