added privacy policy page , cms for privacy policy page, goole tag manager for google ads, added subheading to application page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,4 +18,5 @@ $theme-colors: (
   "partials/getStartedButton", "partials/footer", "partials/about-page",
   "partials/carousel-slide", "partials/faq-page", "partials/basics-page",
   "partials/start-coding", "partials/sidebar-section", "partials/bootcamp-page",
-  "partials/application-form", "partials/careers-page", "partials/thanks";
+  "partials/application-form", "partials/careers-page", "partials/thanks",
+  "partials/privacy-policy";
