Add email form to home page

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -78,6 +78,7 @@
     padding-bottom: 30px;
   }
 }
+
 .homepage-message-bubble-row {
   margin: 20px 0 40px;
   .homepage-message-bubble-container {
@@ -92,8 +93,41 @@
   }
 }
 
-.homepage-success-outer-container {
+.homepage-email-form-container {
   background-color: variables.$light;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  .homepage-email-form-header {
+    margin-bottom: 20px;
+  }
+
+  .homepage-email-form {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+
+    .homepage-email-form-control {
+      width: 50%;
+      min-width: 200px;
+      max-width: 300px;
+      margin: 0px 10px;
+      border: 0px;
+      display: inline;
+    }
+
+    .homepage-email-form-button {
+      color: white;
+    }
+  }
+
+  .homepage-email-form-post-submit-discord-section {
+    margin-bottom: 10px;
+  }
+}
+
+.homepage-success-outer-container {
   .homepage-success-inner-container {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -136,6 +170,7 @@
 }
 
 .homepage-courses-container {
+  background-color: variables.$light;
   padding-top: 20px;
   padding-bottom: 20px;
   @include variables.md {
@@ -237,7 +272,6 @@
 }
 
 .homepage-curriculum-outer-container {
-  background-color: variables.$light;
   padding-top: 30px;
   padding-bottom: 20px;
   @include variables.md {
@@ -342,6 +376,7 @@
 }
 
 .homepage-formerstudents-container {
+  background-color: variables.$light;
   font-family: variables.$secondary-font;
   font-style: normal;
   min-height: 3px;
