--- a/src/styles/partials/_start-coding.scss
+++ b/src/styles/partials/_start-coding.scss
@@ -1,5 +1,5 @@
 .startcoding-outer-container {
-  background-color: variables.$light;
+  // background-color: variables.$light;
   .startcoding-inner-container {
     padding-top: 40px;
     padding-bottom: 40px;
