Clean up style code

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -124,6 +124,10 @@
 
   .homepage-email-form-post-submit-discord-section {
     margin-bottom: 10px;
+
+    .homepage-email-form-post-submit-discord-image {
+      max-width: 300px;
+    }
   }
 }
 
