--- a/src/styles/partials/_navbar.scss
+++ b/src/styles/partials/_navbar.scss
@@ -3,17 +3,11 @@
   font-size: 14px;
 
   .navbar-collapse.collapse.show {
-    height: 100vh;
     .navbar-nav {
-      height: 100vh;
-      position: relative;
-      padding-top: 30px;
       .nav-item.dropdown {
         width: 100%;
       }
       .button-container {
-        position: absolute;
-        bottom: 10%;
         width: 100%;
       }
     }
@@ -25,11 +19,11 @@
   }
 
   .navbar-btn {
-    border-radius: 7px;
+    border-radius: 0.25rem;
     font-size: 14px;
     font-weight: 500;
     width: 100%;
-    padding: 10px 0;
+    padding: 6px 0;
     @include variables.lg {
       width: 120px;
       padding: 6px 0;
@@ -37,7 +31,7 @@
     }
     a {
       text-decoration: none;
-      color: variables.$red;
+      color: white;
     }
   }
   .navbar-btn:hover {
@@ -57,7 +51,7 @@
 
   .dropdown-menu.show {
     border: None;
-    background-color: variables.$light;
+    // background-color: variables.$light;
     @include variables.lg {
       border: 0.5px solid grey;
       background-color: white;
