--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -13,6 +13,7 @@
       color: white;
       text-decoration: none;
     }
+
     .footer-top-row {
       border-bottom: 1px solid white;
       @include variables.md {
@@ -34,6 +35,9 @@
           font-size: 16px;
           line-height: 22px;
         }
+      }
+      a:hover {
+        text-decoration: underline;
       }
       .footer-top-left-col {
         .rocket-logo-container-desktop {
@@ -60,6 +64,7 @@
         }
       }
     }
+
     .footer-bottom-row {
       padding-top: 10px;
 
