Update homepage text to center on mobile and left-align on larger screens

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -76,6 +76,10 @@
   }
   .homepage-header-col-left {
     padding-bottom: 30px;
+    text-align: center;
+    @include variables.sm {
+      text-align: left;
+    }
   }
 }
 
