--- a/src/styles/partials/_getStartedButton.scss
+++ b/src/styles/partials/_getStartedButton.scss
@@ -6,6 +6,11 @@
   @include variables.md {
     width: 120px;
   }
+
+  .get-started-btn-link {
+    text-decoration: none;
+    color: white;
+  }
 }
 
 .get-started-btn:hover {
