--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -4,7 +4,7 @@
     padding-bottom: 30px;
   }
   .homepage-header-heading {
-    padding-top: 20px;
+    // padding-top: 20px;
     font-weight: bold;
     font-size: 28px;
     line-height: 36px;
