Add early bird discount info to website

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,4 +19,4 @@ $theme-colors: (
   "partials/about-page", "partials/carousel-slide", "partials/faq-page",
   "partials/basics-page", "partials/start-coding", "partials/sidebar-section",
   "partials/bootcamp-page", "partials/application-form", "partials/careers-page",
-  "partials/thanks", "partials/privacy-policy";
+  "partials/thanks", "partials/privacy-policy", "partials/get-started-page";
