Adjust margin on homepage above fold CTA

--- a/src/styles/partials/_homepage.scss
+++ b/src/styles/partials/_homepage.scss
@@ -27,7 +27,7 @@
     }
   }
   .homepage-header-button-container {
-    margin: 30px 0;
+    margin: 20px 0px 30px 0px;
   }
   .homepage-header-companies-heading {
     color: rgba(0, 0, 0, 0.5);
