--- a/src/styles/partials/_announcement-bar.scss
+++ b/src/styles/partials/_announcement-bar.scss
@@ -1,16 +1,17 @@
-.announcement-bar {
-  text-align: center;
-  border: 0;
-  margin-bottom: 0;
-  border-radius: 0;
-  background-color: variables.$blue;
-  color: white;
+.announcement-bar-link {
+  text-decoration: none;
 
-  .announcement-bar-heading {
+  .announcement-bar {
+    text-align: center;
+    border: 0;
     margin-bottom: 0;
+    border-radius: 0;
+    background-color: variables.$blue;
+    color: white;
 
-    .announcement-bar-link {
-      color: white;
+    .announcement-bar-heading {
+      margin-bottom: 0;
+      font-weight: 300;
     }
   }
 }
