--- a/src/styles/partials/_basics-page.scss
+++ b/src/styles/partials/_basics-page.scss
@@ -4,10 +4,10 @@
   .basics-header-inner-container {
     color: white;
     padding-top: 30px;
-    padding-bottom: 110px;
+    padding-bottom: 140px;
     @include variables.md {
       padding-top: 60px;
-      padding-bottom: 100px;
+      padding-bottom: 110px;
     }
     .basics-header-text-container {
       @include variables.md {
@@ -105,6 +105,7 @@
       line-height: 19px;
       letter-spacing: 0.03em;
     }
+
     .basics-next-batch-text {
       font-family: variables.$primary-font;
       font-style: normal;
@@ -116,6 +117,19 @@
         font-size: 24px;
         line-height: 28px;
         margin-bottom: 0;
+      }
+    }
+
+    .basics-next-batch-text-desktop {
+      display: none;
+      @include variables.md {
+        display: block;
+      }
+    }
+
+    .basics-next-batch-text-mobile {
+      @include variables.md {
+        display: none;
       }
     }
   }
