--- a/src/styles/partials/_bootcamp-page.scss
+++ b/src/styles/partials/_bootcamp-page.scss
@@ -4,10 +4,10 @@
   .bootcamp-header-inner-container {
     color: white;
     padding-top: 30px;
-    padding-bottom: 110px;
+    padding-bottom: 140px;
     @include variables.md {
       padding-top: 60px;
-      padding-bottom: 100px;
+      padding-bottom: 110px;
     }
     .bootcamp-header-text-container {
       @include variables.md {
@@ -109,6 +109,19 @@
         font-size: 24px;
         line-height: 28px;
         margin-bottom: 0;
+      }
+    }
+
+    .basics-next-batch-text-desktop {
+      display: none;
+      @include variables.md {
+        display: block;
+      }
+    }
+
+    .basics-next-batch-text-mobile {
+      @include variables.md {
+        display: none;
       }
     }
   }
